<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.android.boilerplate.view.auth.forgotpassword.ForgotPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/skin_FDF8F4_black_1D1D1D">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            style="@style/SelectableItemBackgroundBorderless"
            android:layout_width="@dimen/sdp_24"
            android:layout_height="@dimen/sdp_24"
            android:layout_marginHorizontal="@dimen/sdp_16"
            android:layout_marginTop="@dimen/sdp_30"
            android:contentDescription="@string/back"
            android:padding="@dimen/sdp_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/tv_poppins_semi_bold_12_black_595959_gray_C8C8C8"
            android:text="@string/forgot_password_question"
            android:textSize="@dimen/ssp_15"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_enter_email"
            style="@style/tv_poppins_semi_bold_9_gray_8D8D8D_gray_C8C8C8"
            android:layout_marginTop="@dimen/sdp_37"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/enter_email_for_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/et_poppins_regular_12_gray_8D8D8D_white_FFFFFF"
            android:layout_marginHorizontal="@dimen/sdp_16"
            android:layout_marginTop="@dimen/sdp_6"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_email"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_need_help"
            style="@style/tv_poppins_semi_bold_9_gray_8D8D8D_gray_C8C8C8"
            android:layout_marginTop="@dimen/sdp_37"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/need_help_visit_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            style="@style/btn_poppins_semi_bold_13_black_595959"
            android:layout_marginTop="@dimen/sdp_12"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintTop_toBottomOf="@id/tv_need_help"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>