<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.android.boilerplate.view.auth.changepassword.ChangePasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/skin_FDF8F4_black_1D1D1D">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            style="@style/SelectableItemBackgroundBorderless"
            android:layout_width="@dimen/sdp_24"
            android:layout_height="@dimen/sdp_24"
            android:layout_marginHorizontal="@dimen/sdp_16"
            android:layout_marginTop="@dimen/sdp_30"
            android:contentDescription="@string/back"
            android:padding="@dimen/sdp_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/tv_poppins_semi_bold_12_black_595959_gray_C8C8C8"
            android:text="@string/create_new_password"
            android:textSize="@dimen/ssp_15"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_new_password"
            style="@style/tv_poppins_semi_bold_9_gray_8D8D8D_gray_C8C8C8"
            android:layout_marginTop="@dimen/sdp_37"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/create_new_password_to_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/et_poppins_regular_12_gray_8D8D8D_white_FFFFFF"
            android:layout_marginHorizontal="@dimen/sdp_16"
            android:layout_marginTop="@dimen/sdp_18"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_with_8_plus_chars"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_new_password"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_re_enter_password"
            style="@style/et_poppins_regular_12_gray_8D8D8D_white_FFFFFF"
            android:layout_marginHorizontal="@dimen/sdp_16"
            android:layout_marginTop="@dimen/sdp_12"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_password"
            style="@style/btn_poppins_semi_bold_13_black_595959"
            android:layout_marginTop="@dimen/sdp_25"
            android:text="@string/create_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_re_enter_password"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>