<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/dest_main">

    <fragment
        android:id="@+id/dest_main"
        android:name="com.android.boilerplate.view.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_dest_main_to_dest_more"
            app:destination="@id/dest_more"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
        <action
            android:id="@+id/action_dest_main_to_dest_settings"
            app:destination="@id/dest_settings"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
        <action
            android:id="@+id/action_dest_main_to_dest_feedback"
            app:destination="@id/dest_feedback"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
    </fragment>

    <fragment
        android:id="@+id/dest_more"
        android:name="com.android.boilerplate.view.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more">
        <action
            android:id="@+id/action_dest_more_to_dest_settings"
            app:destination="@id/dest_settings"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
        <action
            android:id="@+id/action_dest_more_to_dest_feedback"
            app:destination="@id/dest_feedback"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
    </fragment>

    <fragment
        android:id="@+id/dest_feedback"
        android:name="com.android.boilerplate.view.feedback.FeedbackFragment"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/dest_settings"
        android:name="com.android.boilerplate.view.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_dest_settings_to_languagesFragment"
            app:destination="@id/dest_languages"
            app:enterAnim="@anim/slide_in_from_right"
            app:popExitAnim="@anim/slide_out_from_left" />
    </fragment>

    <fragment
        android:id="@+id/dest_languages"
        android:name="com.android.boilerplate.view.settings.language.LanguagesFragment"
        android:label="@string/languages"
        tools:layout="@layout/fragment_languages" />

</navigation>